--- a/web/w3schools_2/w3schools_2.css
+++ b/web/w3schools_2/w3schools_2.css
@@ -502,10 +502,16 @@ hr {
 }
 
 .content__example__code {
-    height: 300px;
+    padding: 15px;
     background-color: var(--white);
     margin-bottom: 20px;
     border-left: 5px solid var(--green);
+}
+
+.content__example__code pre {
+    width: 100%;
+    height: 100%;
+    white-space: pre-line;
 }
 
 /* ------------------------------------ */
