--- a/web/w3schools_2/w3schools_2.css
+++ b/web/w3schools_2/w3schools_2.css
@@ -512,6 +512,24 @@ hr {
     width: 100%;
     height: 100%;
     white-space: pre-line;
+    font-size: 14px;
+}
+
+.content__example__code code {
+    color: blue;
+    line-height: 20px;
+}
+
+.content__example__code span {
+    color: brown;
+}
+
+.content__example__code span.p {
+    color: black;
+}
+
+.content__example__code span.red {
+    color: rgb(255, 0, 0);
 }
 
 /* ------------------------------------ */
