--- a/web/studio_design_lading_page/studio_design_lading_page.css
+++ b/web/studio_design_lading_page/studio_design_lading_page.css
@@ -708,6 +708,10 @@ img {
     background-color: var(--yellow);
 }
 
+.bg-green {
+    background-color: var(--green);
+}
+
 .bg-pink {
     background-color: var(--pink);
 }
