--- a/web/agency_lading_page/agency_lading_page.css
+++ b/web/agency_lading_page/agency_lading_page.css
@@ -26,6 +26,16 @@
     --nav__3__height: 20px;
 }
 
+/* html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+} */
+
 * {
     margin: 0;
     padding: 0;
