--- a/button.css
+++ b/button.css
@@ -1,6 +1,6 @@
 html {
-    font-size: 10px;
     font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+    box-sizing: border-box;
 }
 
 body {
@@ -15,23 +15,48 @@ section {
 }
 
 .container {
-    width: 200px;
-    height: 200px;
+    padding: 20px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    min-height: 220px;
+}
+
+.decription {
+    margin-top: 20px;
+    display: flex;
+}
+
+ul {
+    width: 240px;
+    border: 1px dashed black;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 25px;
+
+}
+
+li {
+    /* list-style-type: none; */
+    list-style-position: inside;
+    white-space: nowrap;
 }
 
 button {
+    height: 60px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    padding: 20px 35px;
+    font-weight: 600;
+    background-color: transparent;
+    border: 1px solid black;
 }
 
 .button__1 {
     color: rgb(255, 255, 255);
     background-color: rgb(235, 76, 136);
-    padding: 10px 12px;
 }
 
 .button__1:hover {
@@ -42,7 +67,6 @@ button {
 .button__2 {
     color: rgb(255, 255, 255);
     background-color: rgb(250, 100, 0);
-    padding: 15px 20px;
     font-weight: 600;
 }
 
@@ -54,7 +78,6 @@ button {
 .button__3 {
     color: rgb(255, 255, 255);
     background: linear-gradient(45deg, red 0 30%, blue 70% 100%);
-    padding: 6px 16px;
     font-weight: 600;
 }
 
@@ -66,7 +89,6 @@ button {
 
 .button__4 {
     border-radius: 999px;
-    padding: 15px 20px;
     background-color: rgb(255, 255, 255);
     box-shadow: 0 3px 10px 1px rgba(74, 74, 74, 0.3);
 }
@@ -83,7 +105,6 @@ button {
 
 .button__5 {
     border-radius: 15px;
-    padding: 15px 25px;
     background: linear-gradient(45deg, #1CB0F6, #3fc2ff);
     color: white;
     border-bottom: 5px solid #5591ad;
@@ -96,7 +117,6 @@ button {
 }
 
 .button__6 {
-    padding: 15px 25px;
     border: 1px solid black;
     background-color: white;
 }
@@ -109,7 +129,6 @@ button {
 .button__7 {
     color: white;
     background-color: black;
-    padding: 20px 25px;
     font-weight: 600;
     border-radius: 15px;
 }
@@ -120,14 +139,11 @@ button {
 }
 
 .button__8 {
-    padding: 12px 20px;
     background-color: white;
-    font-size: 16px;
-    font-weight: 500;
     border-bottom: 4px solid rgb(239, 239, 239);
     box-shadow: 0 2px 3px 1px rgba(36, 36, 36, 0.25),
         0 4px 5px 5px rgba(36, 36, 36, 0.1);
-    transition: all 0.1s linear;
+    transition: 0.1s linear;
 }
 
 .button__8:hover {
@@ -143,17 +159,15 @@ button {
 }
 
 .button__9 {
-    padding: 10px 20px;
     color: green;
     background-color: rgb(191, 250, 213);
     border-radius: 999px;
     box-shadow: 0 1px 5px 0.5px rgb(128, 193, 152),
         0 3px 10px 1px rgb(166, 225, 188);
-    transition: transform 0.5s linear;
+    transition: 0.5s linear;
 }
 
 .button__9:hover {
-    transition-timing-function: linear;
     transform: scale(1.1);
     box-shadow: 0 3px 10px 0.5px rgb(128, 193, 152),
         0 5px 20px 1px rgb(166, 225, 188)
@@ -161,7 +175,6 @@ button {
 
 .button__10 {
     background: #0078d0;
-    padding: 15px 25px;
     border-radius: 999px;
     position: relative;
     color: white;
@@ -181,14 +194,12 @@ button {
 
 .button__11 {
     border-radius: 0;
-    padding: 20px 35px;
     position: relative;
     background-color: transparent;
     border: 1px solid;
-    /* transform: rotate(-10deg); */
 }
 
-.button__11::before {
+.button__11::after {
     content: "";
     position: absolute;
     background: #FEE54D;
@@ -199,29 +210,33 @@ button {
     z-index: -2;
 }
 
-.button__11:hover::before {
+.button__11:hover::after {
     top: 0;
     left: 0;
 }
 
 .button__12 {
     border-radius: 0;
-    padding: 5px;
     background: linear-gradient(to right bottom, rgb(202, 20, 202), rgb(32, 32, 218), aqua);
     display: flex;
     border-radius: 5px;
-
+    padding: 5px;
+    margin-bottom: 20px;
 }
 
 .button__12 span {
     width: 100%;
     height: 100%;
-    padding: 15px 25px;
+    padding: 0 30px;
     border-radius: 5px;
     color: white;
     background-color: rgb(0, 0, 0);
     transition: 0.5s;
+    display: flex;
+    align-items: center;
+
 }
+
 
 .button__12 span:hover {
     background-color: transparent;
@@ -229,7 +244,6 @@ button {
 
 .button__13 {
     border-radius: 0;
-    padding: 20px 35px;
     background: linear-gradient(to left, white 50%, rgb(227, 227, 227) 50%) right;
     background-size: 200%;
     transition: 0.5s ease-out;
@@ -241,14 +255,13 @@ button {
 }
 
 .button__14 {
-    padding: 15px 25px;
     background: transparent;
     position: relative;
     border: 1px solid black;
     overflow: hidden;
 }
 
-.button__14::before {
+.button__14::after {
     content: "";
     position: absolute;
     width: 0;
@@ -262,20 +275,18 @@ button {
     border-radius: 50%;
 }
 
-.button__14:hover::before {
+.button__14:hover::after {
     width: 150px;
     height: 150px;
 }
 
 .button__15 {
-    padding: 15px 25px;
-    background: transparent;
     position: relative;
     border: 1px solid black;
     overflow: hidden;
 }
 
-.button__15::before {
+.button__15::after {
     content: "";
     position: absolute;
     width: 150%;
@@ -289,20 +300,18 @@ button {
     transform-origin: left bottom;
 }
 
-.button__15:hover::before {
+.button__15:hover::after {
     height: 100%;
     transform: rotate(0deg);
 }
 
 .button__16 {
-    padding: 15px 25px;
-    background: transparent;
     position: relative;
     border: 1px solid black;
     overflow: hidden;
 }
 
-.button__16::before {
+.button__16::after {
     content: "";
     position: absolute;
     width: 100%;
@@ -314,21 +323,18 @@ button {
     transition: 0.5s linear;
 }
 
-.button__16:hover::before {
-    height: 200%;
+.button__16:hover::after {
     transform: translateY(-50%);
 }
 
 .button__17 {
-    padding: 15px 25px;
-    background: transparent;
     border: 1px solid black;
     transition: 0.5s linear;
     position: relative;
     overflow: hidden;
 }
 
-.button__17::before {
+.button__17::after {
     content: "";
     position: absolute;
     width: 200px;
@@ -341,26 +347,23 @@ button {
     transition: 0.25s ease-in;
 }
 
-.button__17:hover::before {
+.button__17:hover::after {
     top: -60px;
     left: -60px;
 }
 
 .button__18 {
-    padding: 15px 25px;
-    background: transparent;
     border: 1px solid black;
     transition: 0.5s linear;
     position: relative;
     overflow: hidden;
 }
 
-.button__18::before {
+.button__18::after {
     content: "";
     position: absolute;
     width: 200px;
     height: 200px;
-    /* transform: rotate(45deg); */
     top: -150px;
     left: -220px;
     z-index: -1;
@@ -368,8 +371,143 @@ button {
     transition: 1s ease-in;
 }
 
-.button__18:hover::before {
+.button__18:hover::after {
     top: -60px;
     left: -60px;
     transform: rotate(45deg);
+}
+
+.button__19 {
+    overflow: hidden;
+    position: relative;
+}
+
+.button__19::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #FEE54D;
+    z-index: -2;
+}
+
+.button__19::after {
+    content: "";
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 999px;
+    z-index: -1;
+    background: white;
+    transition: 1s ease-in;
+}
+
+.button__19:hover::after {
+    width: 0;
+    height: 0;
+}
+
+.button__20 {
+    background-color: black;
+    color: white;
+    position: relative;
+}
+
+.button__20:active {
+    background: transparent;
+    color: black;
+    border: none;
+}
+
+.button__20::after {
+    content: "";
+    position: absolute;
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    filter: blur(5px);
+    background-size: 400%;
+    width: calc(100% + 10px);
+    height: calc(100% + 10px);
+    top: -5px;
+    left: -5px;
+    z-index: -1;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    animation: glowing 20s linear infinite;
+}
+
+.button__20:hover::after {
+    opacity: 1;
+}
+
+@keyframes glowing {
+    0% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 400% 0;
+    }
+
+    100% {
+        background-position: 0 0;
+    }
+}
+
+.button__21 {
+    position: relative;
+    border: none;
+    transition: 0.5s;
+}
+
+.button__21 span {
+    position: relative;
+    color: white;
+    z-index: 5;
+}
+
+.button__21::before {
+    content: "";
+    position: absolute;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+.button__21::after {
+    content: "";
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    bottom: -10px;
+    right: -10px;
+    border-radius: 999px;
+    background: #ffffff15;
+    backdrop-filter: blur(5px);
+    transition: 0.5s;
+}
+
+.button__21:hover::before {
+    transform: translateY(10px) scale(110%);
+}
+
+.button__21:hover::after {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border-radius: 5px;
+}
+
+.button__21:hover span {
+    transform: translateY(10px);
 }
