--- a/css/button.css
+++ b/css/button.css
@@ -656,40 +656,20 @@ button {
     outline-offset: calc(var(--b)/4);
 }
 
-
-/* CSS */
-.button-92 {
-    --c: #fff;
-    /* text color */
-    background: linear-gradient(90deg, #0000 33%, #fff5, #0000 67%) var(--_p, 100%)/300% no-repeat,
-        #004dff;
-    /* background color */
-    color: #0000;
+.button__24 {
+    padding: 5px 50px !important;
+    border-radius: 0;
     border: none;
-    transform: perspective(500px) rotateY(calc(20deg*var(--_i, -1)));
-    text-shadow: calc(var(--_i, -1)* 0.08em) -.01em 0 var(--c),
-        calc(var(--_i, -1)*-0.08em) .01em 2px #0004;
-    outline-offset: .1em;
-    transition: 0.3s;
+    color: white;
+    background-color: #ff0040;
+    transform: rotateY(40deg);
+    transition: 0.5s ease-in;
+    font-size: 30px;
+    font-weight: 600;
+    text-shadow: 8px 0 rgba(0, 0, 0, 0.5);
 }
 
-.button-92:hover,
-.button-92:focus-visible {
-    --_p: 0%;
-    --_i: 1;
-}
-
-.button-92:active {
-    text-shadow: none;
-    color: var(--c);
-    box-shadow: inset 0 0 9e9q #0005;
-    transition: 0s;
-}
-
-.button-92 {
-    font-weight: bold;
-    font-size: 2rem;
-    margin: 0;
-    cursor: pointer;
-    padding: .1em .3em;
+.button__24:hover {
+    transform: rotateY(-40deg);
+    text-shadow: -8px 0 rgba(0, 0, 0, 0.5);
 }
