--- a/feature/web/agency_lading_page/agency_lading_page.css
+++ b/feature/web/agency_lading_page/agency_lading_page.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+/* @import 'swiper/css'; */
 
 :root {
     --background__header: linear-gradient(#712cf9, #712cf9f2);
@@ -169,4 +170,16 @@
     cursor: pointer;
     color: var(--yellow__dark);
     border-color: var(--yellow__dark);
+}
+
+.mySwiper2 .swiper-slide {
+    width: 800px;
+}
+
+.mySwiper2 .swiper-slide:nth-child(2n) {
+    width: 800px;
+}
+
+.mySwiper2 .swiper-slide:nth-child(3n) {
+    width: 600px;
 }
