--- a/feature/button/button.css
+++ b/feature/button/button.css
@@ -723,3 +723,56 @@ button {
         box-shadow: 0 0 0 0 #ef6eae;
     }
 }
+
+.button__27 {
+    position: relative;
+    overflow: hidden;
+}
+
+.bg__27 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -2;
+    background-color: #539be4;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    transition: 1s;
+}
+
+.bg__27L {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: -66%;
+}
+
+.bg__27M {
+    position: absolute;
+    width: 33%;
+    height: 100%;
+    top: 0;
+    left: 33%;
+}
+
+.bg__27R {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: -66%;
+}
+
+.bg__27M:hover~.bg__27 {
+    clip-path: polygon(0 50%, 100% 50%, 100% 100%, 0 100%);
+}
+
+.bg__27L:hover~.bg__27 {
+    clip-path: polygon(0 25%, 100% 75%, 100% 100%, 0 100%);
+}
+
+.bg__27R:hover~.bg__27 {
+    clip-path: polygon(0 75%, 100% 25%, 100% 100%, 0 100%);
+}
