--- a/feature/web/decox_design/decox_design.css
+++ b/feature/web/decox_design/decox_design.css
@@ -226,6 +226,10 @@
     display: flex;
 }
 
+.masonry img {
+    max-width: 100%;
+}
+
 .masonry .masonry-col:not(:last-child) {
     margin-right: 20px;
 }
