--- a/feature/button/button.css
+++ b/feature/button/button.css
@@ -25,11 +25,15 @@ section {
 .decription {
     margin-top: 20px;
     padding: 15px 25px;
-    width: 240px;
+    width: 340px;
     border: 1px dashed black;
     border-radius: 5px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+}
+
+.decription ul {
+    flex-direction: column;
 }
 
 li {
@@ -44,6 +48,16 @@ li {
 
 .invi {
     opacity: 0;
+}
+
+.section__web li {
+    list-style-type: disc;
+    margin-bottom: 5px;
+}
+
+.section__web ul {
+    display: flex;
+    flex-direction: column;
 }
 
 button {
@@ -886,4 +900,85 @@ button {
 
 .bg__27R:hover~.bg__27 {
     clip-path: polygon(0 0, 100% 0, 100% 25%, 0 75%);
+}
+
+.project {
+    width: 100%;
+    margin: 60px;
+    overflow-y: auto;
+    /* height: 1500px; */
+}
+
+.project__item {
+    display: flex;
+    flex-direction: column;
+    padding: 60px;
+    width: 100%;
+    height: 700px;
+    position: relative;
+}
+
+.project__item__bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.project__item__img__bg {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 75%;
+    object-fit: cover;
+    z-index: 0;
+}
+
+.project__img__contant {
+    display: flex;
+    position: relative;
+    margin-bottom: 60px;
+    z-index: 5;
+    height: 300px;
+}
+
+.project__img {
+    position: absolute;
+    width: 80%;
+    box-shadow: 10px 10px 15px 10px rgb(0, 0, 0, 0.7);
+}
+
+.img__1 {
+    top: 0;
+    left: 0;
+    z-index: 3;
+}
+
+.img__2 {
+    top: 40px;
+    left: 40px;
+    z-index: 2;
+}
+
+.img__3 {
+    top: 80px;
+    left: 80px;
+    z-index: 1;
+}
+
+.project__tech {
+    /* display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px; */
+    flex-direction: column;
+    position: relative;
+    color: var(--white);
+
+}
+
+.project__tech li {
+    font-weight: 600;
+    text-align: right;
 }
