--- a/feature/men.css
+++ b/feature/men.css
@@ -1465,6 +1465,10 @@ input:focus {
     display: block;
 }
 
+.invi {
+    visibility: hidden;
+}
+
 .grid {
     display: grid;
 }
@@ -1516,6 +1520,14 @@ input:focus {
 
 .gap-32 {
     gap: 32px;
+}
+
+.gap-40 {
+    gap: 40px;
+}
+
+.gap-60 {
+    gap: 60px;
 }
 
 .gap-100 {
@@ -1683,6 +1695,10 @@ input:focus {
 
 .overflow-y-hidden {
     overflow-y: hidden;
+}
+
+.overflow-y-auto {
+    overflow-y: auto;
 }
 
 .overflow-auto {
@@ -1934,7 +1950,9 @@ input:focus {
         grid-template-columns: repeat(2, 1fr);
     }
 
-
+    .col-1-992 {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 /* (big tablets) */
