--- a/feature/web/decox_design/decox_design.css
+++ b/feature/web/decox_design/decox_design.css
@@ -52,6 +52,11 @@
         top: 100% !important;
         left: 20% !important;
     }
+
+    .foot {
+        display: flex !important;
+        flex-direction: column;
+    }
 }
 
 /* (phones, tablets) */
